--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@imagekit/next": "^2.1.4",
     "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "mongoose": "^9.2.1",
     "next": "16.1.6",
