--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.564.0",
     "mongoose": "^9.2.1",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
